feat: 代码调整，结构优化。样式调整。

--- a/src/assets/sass/custom-variable.scss
+++ b/src/assets/sass/custom-variable.scss
@@ -1,10 +1,10 @@
 /* ===自定义样式变量=== */
 
 /* 新增变量 background */
-$dark-color-background: #2d3a4b;
+$dark-color-background: #3c3b3d;
 $dark-color-background-input: #283443;
-$dark-color-hover-background: #1f2d3d;
-$dark-color-hover-aside: #001528;
+$dark-color-hover-background: #434a54;
+$dark-color-hover-aside: #2b2b2c;
 $dark-color-border-color: #3e4957;
 
 /* 新增变量 color */
